--- a/list_user/templates/listuser.html
+++ b/list_user/templates/listuser.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  padding: 8px;
-}
-
-th, h2 {
-  text-align: center;
-}
-
-td {
-  text-align: left;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 </head>
 <body>
 
+<h1>HELLO {{g.user.uname}}</h1>
 <h2>LIST USERS</h2>
 
 <table>
@@ -47,7 +25,9 @@ tr:nth-child(even) {
     <td>{{user.lname}}</td>
     <td>{{user.email}}</td>
     <td>{{user.psw}}</td>
-  </tr>
+    <td>
+      <a href="/mongodel?user={{user}}">Delete</a><br>
+    </tr>
   {% endfor %}
 </table>
 
