--- a/create_user/templates/index.html
+++ b/create_user/templates/index.html
@@ -109,7 +109,7 @@ h1 {
   </div>
   
   <div class="container signin">
-    <p>Get Users List? <a href="/get">Table User</a>.</p>
+    <p>Go To: <a href="/">Login</a>.</p>
   </div>
 </form>
 
